# training-machine-learning

./: README.md  init.sh  pyproject.toml
ch1/: 1_tensor.py
ch2/: 1_token.py
utils/: utils.py
