[tool.poetry]
name = "training-machine-learning"
version = "0.1.0"
description = ""
authors = ["김은미 <eunmi.kim@toss.im>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.1"
numpy = "^1.23.2"
spacy = "^3.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
